# UXIGuide

./: Jenkinsfile  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: agent.py  main.py
backend/app/common/: errors.py
backend/app/static/: index.html
backend/app/static/css/: style.css
backend/app/static/js/: app.js  audio-player.js
backend/app/static/js/utilities/: capture.js  commands.js  tools.js
backend/uxiguide_agent/: main.py
backend/uxiguide_agent/subagents/.adk/: session.db
docs/: DELIVERABLES.md
frontend/: .firebaserc  .gitignore  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css  styles.scss
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
frontend/src/app/core/animations/: gsap-animations.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/models/: project.model.ts
frontend/src/app/core/services/: auth.service.ts  config.service.ts  project.service.ts  theme.service.ts
ops/: deploy-backend.sh  deploy-frontend.sh
script/: README.md  index.html  package-lock.json  package.json  vite.config.ts
script/src/: index.ts
script/src/common/: commands.ts  config.types.ts
script/src/core/: capturer.ts  mapper.ts  socket.ts
script/src/core/audio/: audio-player.ts  audio-recorder.ts  pcm-player-processor.js
script/src/types/: config.types.ts
script/src/ui/: UIManager.ts  UXIGuideUI.ts  consent.ts  styles.css
script/test/: e2e_test.html  index.html
script/test/e2e/: index.html
(+13 files in other folders)
