[tool.poetry]
name = "uxiguide_agent"
version = "0.1"
description = "UXIGuide backend for Google ADK"
authors = [
    "Abdessamad <abdessamad@belfodil.me>",
    "Abdelmadjid <abdelmadjid.dev@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
google-adk =">=1.26.0,<2.0.0"
fastapi = ">=0.135.1,<0.136.0"
python-dotenv = ">=1.0.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
firebase-admin = ">=6.5.0"
websockets = ">=10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
